<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PushDemo</string>
    <string name="login">登录</string>
    <string name="text_hint">Channel绑定信息：</string>
    <string name="text_btn_init">登陆百度账号初始化Channel</string>
    <string name="text_btn_init1">更换百度账号初始化Channel</string>
    <string name="text_btn_rich">查看富媒体消息</string>
    <string name="text_btn_initAK">无账号初始化Channel</string>
    <string name="text_btn_setTags">设置标签</string>
    <string name="text_btn_delTags">删除标签</string>
    <string name="text_btn_senior">高级功能</string>
    <string name="text_btn_set">设置</string>
    <string name="text_media_title">富媒体消息列表</string>
    <string name="media">Rich Media</string>
    <string name="custom_text_hint">用户自定义打开的Activity</string>
    <string name="tags_hint">请输入多个标签，以英文逗号隔开</string>

</resources>